--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
   <link href="style.css" rel="stylesheet">
-  
+  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+
 
 </head>
 
