added delete button, corrected but allowing multiple decimals, changed button colors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div id="main" class="container">
+        <div id="title">Caleb's Calculator</div>
         <div id="calculator" class="container">
             <div id = "digitHolder" class="container">
             </div>
