fixed upper display and clear functions, wrote readme

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="title">Caleb's Calculator</div>
         <div id="calculator" class="container">
             <div id = "digitHolder" class="container">
+                <div id="entered"></div>
             </div>
             <div id="buttons">
 
